java: suppress native-access warning